--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_tuijianzhuangtai.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/activity_tuijianzhuangtai.xml
@@ -20,7 +20,7 @@
             android:id="@+id/tv_project_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textColor="#333333"
             android:text="凤凰国际"
             />
@@ -32,6 +32,10 @@
             android:textSize="18sp"
             android:text="2017-1-1推荐"
             android:layout_marginLeft="23dp"/>
+        <LinearLayout
+            android:gravity="right"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_disabled_state"
             android:layout_width="wrap_content"
@@ -41,7 +45,7 @@
             android:textColor="#737373"
             android:layout_marginLeft="10dp"
             />
-
+        </LinearLayout>
 
     </LinearLayout>
     <ImageView
@@ -49,7 +53,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:src="@drawable/ic_push_1"
-        android:layout_marginTop="45dp"
+        android:layout_marginTop="20dp"
         />
 
 </LinearLayout>
