--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_project_yongjin.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_project_yongjin.xml
@@ -11,7 +11,7 @@
         <TextView
             android:id="@+id/tv_startTime"
             android:textSize="18sp"
-            android:text="2018-06-11 16:00:00起"
+            android:text=""
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
         <ImageButton
@@ -187,7 +187,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginBottom="10dp"
                         android:lineSpacingExtra="3dp"
-                        android:text="1.60分钟内等信息被确认有效，sjdaofjksldjflkdsfjlskdfjdslkfjkdsldfdsfdslkjdsjfkjf"
+                        android:text=""
                         android:textSize="14sp"
                         />
                     <TextView
@@ -282,7 +282,7 @@
                             android:id="@+id/tv_jieyong"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="1000元"
+                            android:text=""
                             android:textColor="@color/chunhei"
                             android:textSize="15sp"
                             />
