--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_project_danyuanxiangqing.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_project_danyuanxiangqing.xml
@@ -12,8 +12,8 @@
         >
         <ImageButton
             android:id="@+id/house_button_返回"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_leftarrow"
@@ -33,6 +33,48 @@
         android:background="@drawable/ic_line"
         >
     </ImageView>
+
+    <LinearLayout
+        android:background="#ffffff"
+        android:padding="10dp"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:gravity="center"
+            android:layout_marginLeft="5dp"
+            android:background="@color/yiding"
+            android:textColor="@color/white"
+            android:text="已定"
+            android:layout_width="93dp"
+            android:layout_height="33dp" />
+        <TextView
+            android:gravity="center"
+            android:layout_marginLeft="5dp"
+            android:background="@color/saled"
+            android:textColor="@color/white"
+            android:text="已售"
+            android:layout_width="93dp"
+            android:layout_height="33dp" />
+        <TextView
+            android:gravity="center"
+            android:layout_marginLeft="5dp"
+            android:background="#dcdcdc"
+            android:textColor="@color/white"
+            android:text="未售"
+            android:layout_width="93dp"
+            android:layout_height="33dp" />
+
+    </LinearLayout>
+
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/re_loudong"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+    </android.support.v7.widget.RecyclerView>
 
 
 
