--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/fragment_me.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/fragment_me.xml
@@ -157,7 +157,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginRight="10dp"
-                        android:text="云算科技 已认证"
+                        android:text=""
                         />
 
                     <ImageView
