--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/message/layout/activity_message_workmessage.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/message/layout/activity_message_workmessage.xml
@@ -13,8 +13,9 @@
         >
 
         <ImageButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/im_back"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_leftarrow"
@@ -41,6 +42,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
+        android:visibility="gone"
         >
         <RelativeLayout
             android:layout_width="match_parent"
@@ -147,11 +149,7 @@
                 />
         </RelativeLayout>
     </LinearLayout>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="@drawable/ic_line"
-        />
+
 
     <!--模拟，后期删除-->
     <LinearLayout
@@ -159,6 +157,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
+        android:visibility="gone"
         >
         <RelativeLayout
             android:layout_width="match_parent"
@@ -265,17 +264,14 @@
                 />
         </RelativeLayout>
     </LinearLayout>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="@drawable/ic_line"
-        />
+
     <!--模拟，后期删除-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
+        android:visibility="gone"
         >
         <RelativeLayout
             android:layout_width="match_parent"
@@ -382,17 +378,20 @@
                 />
         </RelativeLayout>
     </LinearLayout>
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="10dp"
-        android:background="@drawable/ic_line"
-        />
 
+
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/mSwipRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/rv_worklist"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         >
 
     </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
 </LinearLayout>
