--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_commend_verify_details.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_commend_verify_details.xml
@@ -105,6 +105,7 @@
                 android:gravity="center"
                 android:padding="10dp"
                 android:textSize="20sp"
+                android:textColor="@color/white"
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -121,6 +122,8 @@
                 android:gravity="center"
                 android:padding="10dp"
                 android:textSize="20sp"
+                android:textColor="@color/white"
+
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -137,6 +140,8 @@
                 android:gravity="center"
                 android:padding="10dp"
                 android:textSize="20sp"
+                android:textColor="@color/white"
+
                 />
             <TextView
                 android:layout_width="wrap_content"
@@ -153,6 +158,8 @@
                 android:gravity="center"
                 android:padding="10dp"
                 android:textSize="20sp"
+                android:textColor="@color/white"
+
                 />
             <!--FFA51D-->
         </LinearLayout>
