--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_repost_verify_details.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/work/layout/activity_work_repost_verify_details.xml
@@ -112,6 +112,7 @@
                         android:padding="10dp"
                         android:text="2天"
                         android:textSize="20sp"
+                        android:textColor="@color/white"
                         />
                     <TextView
                         android:layout_width="wrap_content"
@@ -129,6 +130,8 @@
                         android:padding="10dp"
                         android:text="23"
                         android:textSize="20sp"
+                        android:textColor="@color/white"
+
                         />
                     <TextView
                         android:layout_width="wrap_content"
@@ -146,6 +149,8 @@
                         android:padding="10dp"
                         android:text="23"
                         android:textSize="20sp"
+                        android:textColor="@color/white"
+
                         />
                     <TextView
                         android:layout_width="wrap_content"
@@ -163,6 +168,8 @@
                         android:padding="10dp"
                         android:text="23"
                         android:textSize="20sp"
+                        android:textColor="@color/white"
+
                         />
                     <!--FFA51D-->
                 </LinearLayout>
