--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_project_yongjin.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/item_project_yongjin.xml
@@ -5,12 +5,13 @@
     android:orientation="vertical">
 
     <RelativeLayout
+        android:background="@color/gray"
         android:padding="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tv_startTime"
-            android:textSize="18sp"
+            android:textSize="13sp"
             android:text=""
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -32,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:visibility="visible"
+            android:visibility="gone"
             >
             <LinearLayout
                 android:layout_width="match_parent"
@@ -117,6 +118,21 @@
                         android:layout_height="wrap_content"
                         android:layout_marginRight="5dp"
                         android:src="@drawable/ic_lightning_2"
+                        />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_lightning_3"
+                        />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_lightning_3"
+                        />
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:src="@drawable/ic_lightning_3"
                         />
                     <ImageView
                         android:layout_width="wrap_content"
