--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_tuijiankehu.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_tuijiankehu.xml
@@ -816,7 +816,10 @@
 
 
 
-
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/mSwipRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/recyclerview_rv"
@@ -825,6 +828,7 @@
         >
 
     </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
 </LinearLayout>
