--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_huxingxiangqing.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_huxingxiangqing.xml
@@ -438,6 +438,14 @@
                         android:src="@color/qianhui"
                         />
 
+                    <!--展示列表-->
+                    <android.support.v7.widget.RecyclerView
+                        android:id="@+id/re_pipei"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                    </android.support.v7.widget.RecyclerView>
+
 
                     <LinearLayout
                         android:visibility="gone"
