--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/activity_me_erweima.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/activity_me_erweima.xml
@@ -92,6 +92,26 @@
 
 
             </LinearLayout>
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal"
+                >
+
+                <TextView
+                    android:id="@+id/me_text_云算号"
+                    android:text="云算号："
+                    android:textColor="@color/chunhei"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center_vertical"
+                    />
+
+
+            </LinearLayout>
             
             <LinearLayout
                 android:layout_width="match_parent"
@@ -103,8 +123,8 @@
                 <ImageView
                     android:id="@+id/me_image_二维码"
                     android:src="@drawable/ic_launcher_background"
-                    android:layout_width="100dp"
-                    android:layout_height="100dp"
+                    android:layout_width="200dp"
+                    android:layout_height="200dp"
                     />
             </LinearLayout>
         </LinearLayout>
