--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/message/layout/activity_message_workmessage.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/message/layout/activity_message_workmessage.xml
@@ -384,7 +384,7 @@
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
             android:id="@+id/mSwipRefresh"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
         <LinearLayout
             android:padding="10dp"
             android:gravity="center"
