--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_project_danyuanxiangqing.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_project_danyuanxiangqing.xml
@@ -167,12 +167,26 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/re_loudong"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
 
     </android.support.v7.widget.RecyclerView>
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/white"
+        android:paddingBottom="16dp"
+        android:paddingLeft="16dp"
+        android:paddingRight="16dp">
+
+        <com.ccsoft.yunqudao.utils.SeatTable1
+            android:id="@+id/mSeatTable"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
 
 
 
