--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_project_xiangqing.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/activity_house_project_xiangqing.xml
@@ -23,6 +23,7 @@
             />
 
         <Button
+            android:textColor="@color/liji_material_blue_500"
             android:id="@+id/house_button_项目"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -37,7 +38,7 @@
             android:layout_height="match_parent"
             android:layout_weight="1"
             android:background="@android:color/transparent"
-            android:text="佣金"
+            android:text="渠道"
             android:textSize="18sp"
             />
         <Button
@@ -60,11 +61,11 @@
             android:src="@drawable/ic_share"
             />
     </LinearLayout>
-    <android.support.v4.view.ViewPager
+    <com.ccsoft.yunqudao.ui.house.CustomViewPager
         android:id="@+id/house_viewpager_分类"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
-    </android.support.v4.view.ViewPager>
+    </com.ccsoft.yunqudao.ui.house.CustomViewPager>
 
 </LinearLayout>
