--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house_list_activity.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house_list_activity.xml
@@ -62,6 +62,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
+                    android:visibility="visible"
                     >
                     <TextView
                         android:id="@+id/title2"
