--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/activity_me_reset_dizhi.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/activity_me_reset_dizhi.xml
@@ -13,12 +13,11 @@
         android:layout_height="wrap_content"
         android:background="@color/chunbai"
         android:orientation="horizontal"
-        android:padding="20dp"
         >
         <ImageButton
             android:id="@+id/me_button_返回"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_leftarrow"
