--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_customers.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/customers/layout/fragment_customers.xml
@@ -75,6 +75,10 @@
             android:gravity="center"
             android:orientation="horizontal"
             >
+            <ImageView
+                android:src="@drawable/downarrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/content_need"
@@ -105,6 +109,10 @@
             android:gravity="center"
             android:orientation="horizontal"
             >
+            <ImageView
+                android:src="@drawable/downarrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/content_price"
@@ -134,6 +142,10 @@
             android:gravity="center"
             android:orientation="horizontal"
            >
+            <ImageView
+                android:src="@drawable/downarrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
             <TextView
                 android:id="@+id/content_intent"
@@ -164,6 +176,10 @@
             android:orientation="horizontal"
             >
 
+            <ImageView
+                android:src="@drawable/downarrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/content_more"
                 android:layout_width="0dp"
