--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house.xml
@@ -91,6 +91,10 @@
             android:orientation="horizontal"
             android:weightSum="5"
             >
+            <ImageView
+                android:src="@drawable/downarrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/content_区域"
                 android:layout_width="0dp"
@@ -123,6 +127,10 @@
             android:orientation="horizontal"
             android:weightSum="5"
             >
+            <ImageView
+                android:src="@drawable/downarrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/content_均价"
                 android:layout_width="0dp"
@@ -154,6 +162,10 @@
             android:orientation="horizontal"
             android:weightSum="5"
             >
+            <ImageView
+                android:src="@drawable/downarrow"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/content_类型"
                 android:layout_width="0dp"
