--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house_xiangmuxiangqing_xiangmu.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/house/layout/fragment_house_xiangmuxiangqing_xiangmu.xml
@@ -9,7 +9,8 @@
     <ScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="0dp"
+        android:layout_weight="9">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -1191,22 +1192,21 @@
                         android:layout_height="1dp"
                         android:background="@color/qianhui"></View>
 
-
                 </LinearLayout>
-
-
             </LinearLayout>
-
+        </LinearLayout>
+    </ScrollView>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="2">
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:weightSum="3">
 
                 <Button
                     android:id="@+id/house_button_电话咨询"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:background="@color/juse"
                     android:text="电话咨询"
@@ -1215,15 +1215,14 @@
                 <Button
                     android:id="@+id/house_button_推荐3"
                     android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:layout_weight="2"
                     android:background="@color/qianlan"
-                    android:text="推荐"
+                    android:text="快速推荐"
                     android:textColor="@color/chunbai" />
 
             </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+
 
 
 </LinearLayout>
