--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/activity_me_erweima.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/activity_me_erweima.xml
@@ -63,11 +63,11 @@
                 android:gravity="center_horizontal"
                 android:layout_margin="20dp"
                 >
-                <ImageView
+                <com.ccsoft.yunqudao.utils.CircleImageView
                     android:id="@+id/me_icon_二维码头像"
                     android:src="@drawable/ic_def_head"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
                     />
             </LinearLayout>
 
@@ -117,7 +117,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal"
-                android:layout_margin="20dp"
+                android:layout_margin="10dp"
                 >
 
                 <ImageView
