--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/fragment_me.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/fragment_me.xml
@@ -14,8 +14,8 @@
         >
         <com.ccsoft.yunqudao.utils.CircleImageView
             android:id="@+id/me_icon_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
             android:src="@drawable/ic_def_head"
             />
         <TextView
