--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/message/layout/activity_message_systemmessage.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/message/layout/activity_message_systemmessage.xml
@@ -38,6 +38,7 @@
 
     <!--模拟，后期删除-->
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/message_item_linearlayout_审核通过"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -109,6 +110,7 @@
         />
     <!--模拟，后期删除-->
     <LinearLayout
+        android:visibility="gone"
         android:id="@+id/message_item_linearlayout_审核未通过"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
