--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/activity_me_weijieliebiao.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/activity_me_weijieliebiao.xml
@@ -10,12 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="20dp"
         >
         <ImageButton
             android:id="@+id/me_button_返回"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_centerVertical="true"
             android:background="@android:color/transparent"
             android:src="@drawable/ic_leftarrow"
@@ -36,15 +35,38 @@
         android:layout_height="3dp"
         android:background="@drawable/ic_line"
         />
+
+    <com.scwang.smartrefresh.layout.SmartRefreshLayout
+        android:id="@+id/mSwipRefresh"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    <LinearLayout
+        android:padding="10dp"
+        android:gravity="center"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/yunsuan"
+            android:src="@drawable/animation_refresh"
+            android:layout_width="50dp"
+            android:layout_height="50dp" />
+        <TextView
+            android:layout_marginLeft="10dp"
+            android:text="人算不如云算"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/me_recyclerview_未结列表"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         >
 
-
-
     </android.support.v7.widget.RecyclerView>
-
+        <com.scwang.smartrefresh.layout.footer.ClassicsFooter
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+    </com.scwang.smartrefresh.layout.SmartRefreshLayout>>
 
 </LinearLayout>
