--- a/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/activity_me_wodeyongjin.xml
+++ b/eastes_android-developer/yunqudao/app/src/main/res/layout/me/layout/activity_me_wodeyongjin.xml
@@ -177,6 +177,7 @@
             android:paddingRight="10dp"
             >
             <LinearLayout
+                android:id="@+id/me_text_未结佣金条数1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/ic_bg_1"
@@ -187,7 +188,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-
                     android:orientation="vertical"
                     >
                     <LinearLayout
